Contextmenu now Draggable

--- a/page2_versenotes.html
+++ b/page2_versenotes.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="bibleApp.css">
     <link rel="stylesheet" href="bibleApp-2.css">
     <link rel="stylesheet" href="page2_versenotes.css">
+    <script src="script.js/interact.min.js"></script>
     <title>Page 2</title>
 </head>
 
