--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="manifest" href="manifest.json">
   <meta charset="utf-8" name="viewport" content= "width=device-width, initial-scale=1.0">
   <script src="ckeditor-standard/ckeditor.js"></script>
+  <script src="script.js/interact.min.js"></script>
 <style id="verse_alignement">
     .verse {
       display: block;
