--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <button id="darkmodebtn" onclick="darkLightMode()">🌤</button>
         <button id="sitehome"><a href="https://lightcityteachingfellowship.github.io/BibleStudies/" title="Site Home" target="_blank"><img src="images\home-svgrepo-com(maroon).svg" alt="Site Home"></a></button>
       </div>
-      <div id="refnav_col2" style="z-index: -1;">
+      <div id="refnav_col2">
         <div id="bible_nav" class="slideout displaynone">
           <div class="bible_nav" name="books" id="bible_books" multiple></div>
           <div class="bible_nav" name="chapters" id="bible_chapters" multiple></div>
