--- a/index.html
+++ b/index.html
@@ -229,6 +229,15 @@
                 <button class="increase_fontsize" onclick="changeFontSize('versionsbuttons','plus')">+</button>
                 </td>
               </tr>
+              <tr>
+                <td>Side Buttons</i></td>
+                <td>
+                  <button class="decrease_fontsize" onclick="changeFontSize('widthsidebuttons','minus')">-</button>
+                </td>
+                <td>
+                <button class="increase_fontsize" onclick="changeFontSize('widthsidebuttons','plus')">+</button>
+                </td>
+              </tr>
             </table>
           </div>
           
