--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
     
     <main id="main" contenteditable="false">
       <div id="context_menu" class="context_menu slideout displaynone"></div>
-      <div id="show_crossref_comments" class="slideout displaynone">
+      <div id="show_crossref_comments" class="displaynone">
         <button class="buttons" id="verse_crossref_button">TSK</button>
         <button class="buttons" id="verse_notes_button">Note</button>
       </div>
@@ -275,7 +275,7 @@
         <!-- <div id="search_section">adfadfadsfasdfadsf</div> -->
     </main>
   </div>
-  <div id="singleverse_compare_menu" class="slideout displaynone"></div>
+  <div id="singleverse_compare_menu" class="displaynone"></div>
 
   <!-- <textarea name="verse_note" id="verse_note" cols="30" rows="10"></textarea> -->
   <div name="verse_note" id="verse_note" class="verse_note slideup">
