--- a/page2_versenotes.html
+++ b/page2_versenotes.html
@@ -69,13 +69,12 @@
     const buttonContainer = document.querySelector('.button-container');
     const buttonGroup = document.querySelector('.button-group');
 
-    buttonContainer.addEventListener('mouseenter', () => {
-    buttonGroup.classList.add('visible');
-    });
-
-    buttonContainer.addEventListener('mouseleave', () => {
-    buttonGroup.classList.remove('visible');
-    });
+    // buttonContainer.addEventListener('mouseenter', () => {
+    //     buttonGroup.classList.add('visible');
+    // });
+    // buttonContainer.addEventListener('mouseleave', () => {
+    //     buttonGroup.classList.remove('visible');
+    // });
     
     function toggleDarkLightMode(cls){
         document.querySelector('body').classList.toggle(cls)
