--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>LC BibleApp</title>
   <link rel="shortcut icon" href="images/favicon.ico">
-  <link rel="manifest" href="manifest.json">
+  <!-- <link rel="manifest" href="manifest.json"> -->
   <meta charset="utf-8" name="viewport" content= "width=device-width, initial-scale=1.0">
   <script src="ckeditor-standard/ckeditor.js"></script>
   <script src="script.js/interact.min.js"></script>
@@ -319,7 +319,7 @@
 <script src="script.js/bibleApp_localStorage_indexedDB.js" charset="utf-8"></script>
 <script src="script.js/bibleApp_verseNotesSave.js" charset="utf-8"></script>
 <script src="script.js/bibleApp_verseNotes.js" charset="utf-8"></script>
-<script src="/install-prompt.js"></script>
+<!-- <script src="/install-prompt.js"></script> -->
 <script>
     tool_tip.click();
   // window.onload = function() {show_eng_superscript.click()}
