--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
   <div id="singleverse_compare_menu" class="displaynone"></div>
 
   <!-- <textarea name="verse_note" id="verse_note" cols="30" rows="10"></textarea> -->
-  <div name="verse_note" id="verse_note" class="verse_note slideup">
+  <div name="verse_note" id="verse_note" class="verse_note">
   
     <!--element to edit-->
     <!--<div id="editor" data-placeholder="Go on, start editing..."></div>-->
