--- a/index.html
+++ b/index.html
@@ -173,6 +173,12 @@
           </select>
           <div class="" id="change_fontsize">
             <div class="settingssectionheadings">Change Font Sizes</div>
+            <select id="fontsizes" onchange="loadfontsizes()">
+              <option value="fontsizes_1">Office</option>
+              <option value="fontsizes_2">Church</option>
+              <option value="fontsizes_3">House</option>
+              <option value="fontsizes_4">FontSizes-A</option>
+            </select>
             <table id="cache_table">
               <tr>
                 <td>Verse Text</td>
