--- a/index.html
+++ b/index.html
@@ -68,7 +68,10 @@
           <!-- <select></select> -->
         </select>
       </div>
-      <button id="topbartogglebtn" onclick="titlebarsearchparameters.classList.add('slideup'), slideUpDown(top_horizontal_bar_buttons, 'slideup'), this.classList.toggle('active_button')"><span></span><span></span></button>
+      <button id="topbartogglebtn" onclick="titlebarsearchparameters.classList.add('slideup'), slideUpDown(top_horizontal_bar_buttons, 'slideup'), this.classList.toggle('active_button')">
+        <!-- <span></span><span></span> -->
+        <div id="clipart"></div>
+      </button>
     </div>
 
     <!-- BIBLE REFERENCE SIDE BAR -->
