--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
         </select>
       </div>
       <button id="topbartogglebtn" onclick="titlebarsearchparameters.classList.add('slideup'), slideUpDown(top_horizontal_bar_buttons, 'slideup'), this.classList.toggle('active_button')">
-        <!-- <span></span><span></span> -->
-        <div id="clipart"></div>
+        <span></span><span></span>
+        <!-- <div id="clipart"></div> -->
       </button>
     </div>
 
