--- a/index.html
+++ b/index.html
@@ -310,8 +310,7 @@
   
     <div class="text_content" contenteditable="false" placeholder="Take down a comment to the verse"></div>
     <div class="save_edit_btns_holder">
-      <button class="note_save_button" title="click to save verse note" disabled></button><button id="note_edit_button" class="note_edit_button" title="edit verse note"><!-- <img src="images\edit-svgrepo-com.svg" alt="🖉" > --></button>
-      <button class="closebtn note_closebtn" onclick="closeNote(null,null,this)"></button>
+      <button class="note_save_button" title="click to save verse note" disabled></button><button id="note_edit_button" class="note_edit_button" title="edit verse note"></button><button class="closebtn note_closebtn" onclick="closeNote(null,null,this)"></button><button class="closebtn note_closebtn note_closebtn_x" onclick="closeNote(null,null,this)"></button>
     </div>
   </div>
   <!-- <button id="btnAdd">Add to home screen</button> -->
